Fix vertical scrollbar caused by followed mouse element

--- a/src/assets/scss/layout/_layout.scss
+++ b/src/assets/scss/layout/_layout.scss
@@ -11,6 +11,7 @@ body {
     padding: 0;
     margin: 0;
     height: 100%;
+    overflow-y: hidden; //TODO: only set this on home component
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
